Publish TravelMate project to Viet branch